# rlss

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  OccupancyGrid3D.h  PointCloud.h  README.md  SVM.h  bezier_2d_8pts.cpp  bezier_cost_integral_grad_mathematica.h  bezier_integrate_2d_8pts.cpp  bezier_mathematica.h  config.json  configPhysicalRobots.json  config_3d_back.json  config_runningExample.json  curve.cpp  curve.h  discrete_search.hpp  edt.cpp  edt.h  edtv2.cpp  edtv2.h  hyperplane.cpp  hyperplane.h  ipopt_optimize.cpp  ipopt_optimize.h  libsvmtest.cpp  main.cpp  obstacle.cpp  obstacle.h  occupancy_grid.cpp  occupancy_grid.h  optimization.cpp  optimization.h  outpututils.hpp  pointcloudtest.cpp  printutil.hpp  qp.nb  (+24 more)
benchmark/cellsize_comparison/ex1/: all_stats.json  vis.json
benchmark/cellsize_comparison/ex2/: all_stats.json  vis.json
benchmark/cellsize_comparison/ex3/: all_stats.json  vis.json
benchmark/rlss/: config.json  do_benchmarks.py
cvxgen/16pt4obspt/: 16pt4obspt.spec
cvxgen/16robot8obstacle/: Makefile  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  testsolver.cpp  util.cpp
cvxgen/2pt4obspt/: 2pt4obspt.spec
cvxgen/32pt4obspt/: 32pt4obspt.spec
cvxgen/64robot8obstacle/: Makefile  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  testsolver.cpp  util.cpp
cvxgen/8pt4obspt/: 8pt4obspt.spec
examples/: 2d_config.json  2d_planning_simulation.cpp  3d_config.json  3d_planning_simulation.cpp  Examples.cmake  simulation.cpp
include/rlss/: OccupancyGrid.hpp  OccupancyGrid3D.h  RLSS.hpp
lib/: boost
lib/csv/: CSVparser.cpp
libSearch/: a_star.hpp  neighbor.hpp  planresult.hpp
mathematica/: bethereatgiventime.nb  continuity.nb  edtCollisionCost.nb  edtinterpolate.nb  escape_plane.nb  integrator.nb  neval.nb  nevall2norm.nb  nthderivativeNormSqIntegral.nb  nthdiffattimet.nb
paper/: bibliography.bib  paper.tex  paper_example.tex  svproc.cls
paper_configs/: config_16.json  config_17.json  config_18.json  config_19.json  config_20.json  config_7.json  config_compare_1.json  config_compare_2.json  config_compare_4.json
qp/: CMakeLists.txt  objective.nb
qp/src/: main.cpp
solvers/: QPOASESSolver.h  QPSolver.h
test/: CMakeLists.txt  test_PointCloud.cpp
tests/: OccupancyGrid_test.cpp  SVMSequence_test.cpp  Tests.cmake  TimeSequence_test.cpp  internal_BFS_test.cpp  internal_DiscreteSearch_test.cpp  internal_SVM_test.cpp  internal_Statistics_test.cpp  internal_Util_test.cpp
tools/plot/: runtime_split.py
tools/scripts/: generate_start_end_positions.py  result_check.py
vis/: bezier.py  compare.py  stats.py  svm.py  vis.py  vis_static.py  vis_yaml.py
vis/3dvis/: json_schema.json  sample.json  validate.py
visualization_tool/: CurvePiece.py  Hyperplane.py  ex2.csv  frame_test.py  libsvm_test.py  occupied_cells_test.py  pointcloud_test.py  robot_test.py  rviz.sh  trajtest.py
visualization_tool/core/: DiscretePath.py  Frame.py  FrameContainer.py  Hyperplane.py  Obstacle.py  ObstacleContainer.py  OccupiedCells.py  OccupiedCellsContainer.py  PathContainer.py  Robot.py  RobotContainer.py  SVM.py  SVMContainer.py  Simulator.py  Trajectory.py  Voronoi.py  VoronoiContainer.py
visualization_tool/data/: bezier3d.csv  conebezier.csv  example2d.csv  sample.json  twor.json
visualization_tool/tests/: csvtest.py  guitest.py  hplane_test.py  jsontest.py  old_hplane_test.py
visualization_tool/util/: convert_to_bezier_3d.py
(+747 files in other folders)
